--- a/templates/support.html
+++ b/templates/support.html
@@ -22,8 +22,9 @@
         </div>
         <div class="donation-section">
             <h2>Donate Bitcoin</h2>
-            <p class="text">This is where I shamelessly ask for donations. I promise I won't spend the money on cocaïne.</p>
-            (At least I'll try.)
+            <p class="text">This is where I shamelessly ask for donations. Don't worry—no charity or noble cause will benefit from your generous donation.</p>
+            All the money donated will be spent frivolously on stuff I don't really need.
+                        
             <p></p>
             <div class="bitcoin-address">
                 <p>Bitcoin address:</p>
