--- a/templates/buffett.html
+++ b/templates/buffett.html
@@ -25,19 +25,19 @@
         <div class="content">
             <div class="description">
               <h1>Buffett's Intrinsic Value Formula</h1>
-              <p>Buffett's Intrinsic Value Formula is a method used to estimate the true worth of a company based on its fundamental characteristics.</p>
+              <p>Buffett's Intrinsic Value Formula is a valuation method used to estimate the true worth of a company by analyzing its earnings, expected growth rate, and required rate of return. This formula is grounded in fundamental analysis, focusing on the long-term earning power of a company rather than short-term market fluctuations. It is a quick proxy to help investors determine whether a stock is undervalued or overvalued relative to its intrinsic value.</p>
             </div>
             <div class="usage">
               <h2>When to use Buffett's Intrinsic Value Formula</h2>
-              <p>Buffett's Intrinsic Value Formula is useful in situations where an investor wants to estimate the true worth of a company based on its earnings, growth rate, and required rate of return. It is commonly used by value investors.</p>
+              <p>This formula is particularly useful for value investors who prioritize long-term investments in companies with strong fundamentals. It is most effective when evaluating established companies with a consistent track record of earnings and growth. This can be a valuable proxy to identify to identify stocks potentially trading below their intrinsic value, and which might warrant a deeper dive.</p>
             </div>
             <div class="cautions">
               <h2>Cautions and Limitations</h2>
-              <p>Buffett's Intrinsic Value Formula is a powerful tool, but it is not without its limitations. Some things to consider when using this formula include:</p>
+              <p>While Buffett's Intrinsic Value Formula is a powerful tool for assessing a company’s value, it’s important to understand its role as a preliminary or proxy method before diving into a more thorough analysis:</p>
               <ul>
-                <li>The formula relies on accurate estimates of the company's earnings and growth rate, which can be difficult to predict.</li>
-                <li>The formula assumes a constant growth rate, which may not be realistic in practice.</li>
-                <li>The formula does not take into account qualitative factors such as a company's competitive advantages or management quality.</li>
+                <li><strong>Reliance on Earnings and Growth Estimates:</strong> The formula depends heavily on accurate estimates of future earnings and growth rates, which can be difficult to predict. As such, it should be viewed as a rough estimate rather than a definitive valuation, particularly for companies in volatile industries or those with unpredictable earnings patterns.</li>
+                <li><strong>Assumption of Constant Growth Rate:</strong> This formula assumes a steady and constant growth rate over time, which may not align with the realities of fluctuating market conditions, competitive pressures, or changes in the broader business environment. As a result, it provides a simplified view that should be validated with more detailed analysis.</li>
+                <li><strong>Exclusion of Qualitative Factors:</strong> The formula focuses primarily on quantitative data, overlooking qualitative aspects such as a company’s competitive advantages, management quality, or industry trends. These factors can play a significant role in determining a company’s true value and should be explored in subsequent, more comprehensive evaluations.</li>
               </ul>
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="container">
             <div class="value-tips">
                 <h2>Definitions</h2>
-                <p>When filling out the Warren Buffett Formula Calculator, keep in mind the following:</p>
+                
                 <ul>
                   <li><strong>Trailing Earnings Per Share (EPS):</strong> Enter the company's earnings per share for the most recent twelve-month period.</li>
                   <li><strong>Expected EPS Growth:</strong> Enter the expected long-term growth rate for the company's earnings per share. This should be a reasonable estimate and should not be too high as it would result in overvaluation of the company. A typical range is between 5% to 15%.</li>
