--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,10 @@
             <nav id="navbar">
                 <a href="/"><img id="logo" src="/static/valueverse.png" class="logo" alt="logo of the website"></a>
                 <ul id="menu">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/models">Models</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                    <li><a href="/support">Support</a></li>
+                    <li class="active"><a href="/">HOME</a></li>
+                    <li><a href="/models">MODELS</a></li>
+                    <li><a href="/contact">CONTACT</a></li>
+                    <li><a href="/support">SUPPORT</a></li>
                 </ul>
             </nav>
         </div>
