--- a/templates/models.html
+++ b/templates/models.html
@@ -16,7 +16,7 @@
                     <li class="active"><a href="/">HOME</a></li>
                     <li><a href="/models">MODELS</a></li>
                     <li><a href="/contact">CONTACT</a></li>
-                    <li><a href="/support">SUPPORT/a></li>
+                    <li><a href="/support">SUPPORT</a></li>
                 </ul>
             </nav>
         </div>
